<resources>
    <string name="app_name">doggerEc</string>
    <string name="app_sign_up">注册</string>
    <string name="app_sign_in">登录</string>
    <string name="sign_name">名称</string>
    <string name="sign_email">电子名称</string>
    <string name="sign_phone">电话号码</string>
    <string name="sign_pwd">密码</string>
    <string name="sign_pwd_sure">确认密码</string>
    <string name="sign_up_click">注册</string>
    <string name="sign_uped_in">已经注册过？请登录</string>
    <string name="sign_ined_up">还没有注册？现在注册吧</string>
    <string name="sign_up_tip_name">请输入姓名</string>
    <string name="sign_up_tip_pwd">请输入至少6位数密码</string>
    <string name="sign_up_error_pwd">输入密码错误,请重新输入</string>
    <string name="sign_up_tip_email">邮箱格式错误</string>
    <string name="sign_up_tip_phonenum">手机号格式错误</string>
    <string name="bottom_home_key">{fa-home}</string>
    <string name="bottom_sort_key">{fa-sort}</string>
    <string name="bottom_compass_key">{fa-compass}</string>
    <string name="bottom_shopping_cart_key">{fa-shopping-cart}</string>
    <string name="bottom_user_key">{fa-user}</string>
    <string name="bottom_download_key">{fa-download}</string>
    <string name="bottom_home_value">首页</string>
    <string name="bottom_sort_value">分类</string>
    <string name="bottom_compass_value">发现</string>
    <string name="bottom_shopping_card_value">购物车</string>
    <string name="bottom_user_value">我的</string>
    <string name="index_search_hint">搜索</string>
    <string name="bottom_download_value">下载</string>
    <string name="more">查看更多</string>
    <string name="shop_cart_clear">清空</string>
    <string name="shop_cart_title">购物车</string>
    <string name="shop_cart_remove">清除</string>
    <string name="shop_cart_settlement">结算</string>
    <string name="shop_cart_select_all">全选</string>
    <string name="shop_cart_sum">合计</string>
    <string name="shop_cart_icon_check">{fa-check-circle}</string>
    <string name="shop_cart_goods_desc">商品描述</string>
    <string name="shop_cart_goods_title">商品标题</string>
    <string name="shop_cart_minus_tip">购物车单个商品的总数不能小于1！</string>
    <string name="shop_cart_plus_tip">此商品已经达到库存上限！</string>
    <string name="pay_cancel">取消支付</string>
    <string name="setting_not">未设置</string>
    <string name="userprofile_name">姓名</string>
    <string name="userprofile_gender">性别</string>
    <string name="userprofile_birth">性别</string>
    <string name="userprofile_title">个人信息</string>
    <string name="phone">电话</string>
    <string name="address_delete">删除</string>
    <string name="address_manager">地址管理</string>
    <string name="app_setting">系统设置</string>
    <string name="order_commment">评价晒单</string>
    <string name="order_commment_commit">提交</string>
    <string name="order_comment_score">评分</string>

    <string name="home_table_refernce">推荐</string>
    <string name="home_table_android">安卓</string>
    <string name="home_table_head">前端</string>
    <string name="home_table_monkey">猿媛</string>
    <string name="home_table_news">资讯</string>
</resources>
