<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_divider_gray"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@color/app_main"
        android:gravity="center">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_shop_cart_clear"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="10dp"
                android:gravity="center"
                android:text="@string/shop_cart_clear"
                android:textColor="@android:color/white"
                android:textSize="18sp" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_shop_cart_title"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_centerHorizontal="true"
                android:gravity="center"
                android:text="@string/shop_cart_title"
                android:textColor="@android:color/white"
                android:textSize="20sp" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_shop_cart_remove_selected"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:text="@string/shop_cart_remove"
                android:textColor="@android:color/white"
                android:textSize="18sp"
                tools:ignore="RelativeOverlap" />


        </RelativeLayout>

    </android.support.v7.widget.Toolbar>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_shop_cart"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8" />

    <android.support.v7.widget.ViewStubCompat
        android:id="@+id/stub_empty"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="8"
        android:background="@android:color/white"
        android:minHeight="50dp"
        android:layout="@layout/stub_empty"
        android:orientation="horizontal" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:minHeight="50dp"
        android:orientation="horizontal">
        <!--全选部分开始-->
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@android:color/white"
            tools:ignore="NestedWeights">

            <com.joanzapata.iconify.widget.IconTextView
                android:id="@+id/itv_shop_select_all"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/shop_cart_icon_check"
                android:textColor="@android:color/darker_gray"
                android:textSize="20sp"
                tools:ignore="HardcodedText,InefficientWeight" />

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/shop_cart_select_all"
                android:textColor="@color/app_main"
                android:textSize="20sp" />
        </android.support.v7.widget.LinearLayoutCompat>
        <!--全选结束-->

        <!--合计部分-->
        <android.support.v7.widget.LinearLayoutCompat
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="2"
            android:background="@android:color/white">
            <android.support.v7.widget.AppCompatTextView
                android:textColor="@android:color/darker_gray"
                android:gravity="center"
                android:text="@string/shop_cart_sum"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent" />

            <android.support.v7.widget.AppCompatTextView
                android:id="@+id/tv_shop_cart_total_price"
                android:textColor="@color/app_main"
                android:gravity="center|left"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="match_parent" />
        </android.support.v7.widget.LinearLayoutCompat>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_shop_cart_pay"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/app_main"
            android:gravity="center"
            android:text="@string/shop_cart_settlement"
            android:textColor="@android:color/white"
            android:textSize="20sp" />
    </LinearLayout>
</android.support.v7.widget.LinearLayoutCompat>