<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:background="@color/app_main"
        android:gravity="center">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/order_commment"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_order_comment_commit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="20dp"
            android:text="@string/order_commment_commit"
            android:textColor="@android:color/white" />

    </android.support.v7.widget.Toolbar>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">
        <!--商品缩略图-->
        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/iv_order_commit"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_centerVertical="true"
            android:layout_marginLeft="10dp"
            tools:ignore="ContentDescription" />
        <!--评分控件-->
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_order_comment_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginTop="10dp"
            android:layout_toRightOf="@+id/iv_order_commit"
            android:text="@string/order_comment_score"
            android:textColor="@color/we_chat_black" />

        <!--自定义星控件-->
        <com.example.dogger_ui.widget.StarLayout
            android:id="@+id/star_order_comment"
            android:layout_below="@+id/tv_order_comment_score"
            android:layout_toRightOf="@+id/iv_order_commit"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="20dp"
            android:paddingTop="10dp"
            />
    </RelativeLayout>
</LinearLayout>