<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="100dp"
    android:layout_marginBottom="10dp"
    android:background="@android:color/white"
    android:orientation="horizontal">

    <com.joanzapata.iconify.widget.IconTextView
        android:id="@+id/itv_shop_item_check"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginLeft="10dp"
        android:gravity="center"
        android:text="@string/shop_cart_icon_check"
        android:textColor="@android:color/darker_gray" />

    <android.support.v7.widget.AppCompatImageView
        android:id="@+id/iv_shop_item_thumb"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        tools:ignore="ContentDescription" />
    <!--商品部分开始-->
    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:padding="10dp">

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_shop_item_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:lines="1"
            android:text="@string/shop_cart_goods_title"
            android:textSize="18sp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_shop_item_desc"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:lines="1"
            android:text="@string/shop_cart_goods_desc"
            android:textSize="18sp" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_shop_item_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="¥100"
            android:textColor="@color/app_main"
            android:textSize="18sp"
            android:typeface="monospace" />
    </android.support.v7.widget.LinearLayoutCompat>
    <!--商品部分结束-->

    <android.support.v7.widget.LinearLayoutCompat
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="10dp"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="horizontal"
        android:padding="10dp">

        <com.joanzapata.iconify.widget.IconTextView
            android:id="@+id/itv_shop_item_minus"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:gravity="center"
            android:text="{fa-minus-square-o}"
            android:textSize="24sp"
            tools:ignore="HardcodedText" />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_shop_item_count"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:gravity="center"
            android:text="1"
            android:textSize="18sp" />

        <com.joanzapata.iconify.widget.IconTextView
            android:id="@+id/itv_shop_item_plus"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:gravity="center"
            android:text="{fa-plus-square-o}"
            android:textSize="24sp"
            tools:ignore="HardcodedText" />
    </android.support.v7.widget.LinearLayoutCompat>
</android.support.v7.widget.LinearLayoutCompat>